<resources>
    <string name="app_name">FluidAdmin</string>
    <string name="first_name">First Name</string>
    <string name="first_name_ar" translatable="false">الأسم الأول</string>
    <string name="family_name_txt">Family Name</string>
    <string name="family_name_ar_txt" translatable="false">أسم العائلة</string>
    <string name="language_txt">English</string>
    <string name="language_ar_txt" translatable="false">العربية</string>
    <string name="email_txt">Email</string>
    <string name="mobile_number_txt">Phone</string>
    <string name="number_prompt">number</string>
    <string name="email_prompt">Email</string>
    <string name="gender_txt">Gender</string>
    <string name="cancel_btn_txt">Cancel</string>
    <string name="update_txt">Update</string>
    <string name="add_txt">Add</string>
    <string name="clinics">Clinics</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="facilty_id">ID</string>
    <string name="decsription">Description </string>
    <string name="device_txt">Device </string>
    <string name="type">Type </string>
    <string name="code_type">Code Type</string>
    <string name="waitingAreaID">Waiting Area </string>
    <string name="Agents">Agents</string>
    <string name="provider">Providers</string>
    <string name="client">Clients</string>
    <string name="facilty">Facilities</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">Specialities</string>

    <string name="clinic">Clinic</string>
    <string name="waiting_area">Waiting Area</string>
    <string name="menu_english_language">English</string>
    <string name="menu_arabic_language">Arabic</string>
    <string name="id_txt">ID</string>
    <string name="code_txt">Code</string>
    <string name="user_code_txt">User Code:</string>
    <string name="edit_txt">Update</string>
    <string name="link_to_facility_txt">Facilities</string>
    <string name="delete_txt">Delete</string>
    <string name="link_to_speciality_txt">link to speciality</string>
    <string name="options_menu">⋮</string>
    <string name="ok_txt_btn">Ok</string>
    <string name="delete_title_dialog">Do you want to Delete?</string>
    <string name="name_txt">Name</string>
    <string name="email_example_txt">momen.shahen2020@gmail.com</string>
    <string name="exception_glide_txt">Exception while loading image using Glide</string>
    <string name="phone_example_txt">+201020118856</string>
    <string name="clinic_example_txt">ENT10</string>
    <string name="male_txt">Male</string>
    <string name="speciality_txt">Speciality</string>
    <string name="choose_facilities">Select Facilities</string>

    <string name="link_btn_txt">LINK</string>
    <string name="room_txt">Room</string>
    <string name="female_txt">Female</string>
    <string name="description_hint">Description</string>
    <string name="action_search">search</string>
    <string name="update_specialilty_title">Update Speciality</string>
    <string name="add_specialilty_title">Add New Speciality</string>
    <string name="add_facility">Add Facility</string>
    <string name="update_facility">Update Facility</string>
    <string name="agent_id">id</string>

    <string name="error_message_for_number">Enter at least 10 numbers</string>
    <string name="error_message_for_email">Enter a Valid Email</string>
    <string name="first_name_error_message">First Name is required Field</string>
    <string name="aphabets_error_message">Enter only alphabets</string>
    <string name="family_name_error_message">Family Name is required Field</string>
    <string name="choose_speciality_error_message">Please choose one of specialities</string>
    <string name="id_error_message">Id is required Field</string>
    <string name="choose_facility_type_error">Select Facility Type</string>
    <string name="description_error_message">Description is required field</string>
    <string name="branches_txt">Branches</string>
    <string name="facilities_txt">Facilities</string>
    <string name="address_txt">Address</string>
    <string name="day">29</string>
    <string name="month">nov</string>
    <string name="year">2019</string>
    <string name="doctor_image">doctor image</string>
    <string name="text_view">TextView</string>
    <string name="phone_number">Phone number</string>
    <string name="expected_time_txt">Expected</string>
    <string name="scheduled_time_txt">Scheduled</string>
    <string name="address_error_message">Invalid address</string>
    <string name="date_txt">Date</string>
    <string name="confirm_txt_btn">Confirm</string>
    <string name="appointment_booked_title">Appointment Booked</string>
    <string name="doctor_name_txt">Doctor Name</string>
    <string name="time_txt">Time</string>
    <string name="date_text">Date</string>
    <string name="take_screenshot_txt">Take screenshot</string>
    <string name="client_txt">Client</string>
    <string name="book_appointment_txt">Book appointment</string>
    <string name="cancel_appointment_txt">Do you want to cancel this appointment?</string>
    <string name="middle_name_prompet">Middle Name</string>
    <string name="family_name_prompt">Family Name</string>
    <string name="nationality_txt">Nationality</string>
    <string name="identity_type_txt">Identity Type</string>
    <string name="identity_number_txt">Identity Number</string>
    <string name="register_txt">Register</string>
    <string name="date_of_birth_txt">Date of birth</string>
    <string name="user_created_sueccfully">Client created successfully</string>
    <string name="null_parameter_txt">there is a null parameter</string>
    <string name="user_not_exist">Client doens\'t exist</string>
    <string name="error_with_status_code_txt">Error with status code</string>
    <string name="invalid_date">Invalid date</string>
    <string name="invalid_mobile_number_txt">Invalid mobile number</string>
    <string name="dateFrom">From</string>
    <string name="dateTo">To</string>
    <string name="summer_schedule">Summer Schedule</string>
    <string name="day_name">Monday</string>
    <string name="showSessions">Show Sessions</string>
    <string name="schedules">schedules</string>
    <string name="site_txt">Site</string>
    <string name="description">Description</string>
    <string name="sessions">Sessions</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="fail_to_load_clients_try_again_txt">Failed to load clients, Try Again</string>
    <string name="working_hours_txt">Working Hours</string>
    <string name="working_days_txt">Working Days</string>
    <string name="guard_id">Guard ID</string>
    <string name="update_agent_txt">update agent</string>
    <string name="add_Agent_txt">add agent</string>
    <string name="update_schedule_txt">Update Schedule</string>
    <string name="add_Schedule_txt">Add Schedule</string>
    <string name="appointments_txt">Appointments</string>
    <string name="confirm_appointment_txt">Confirm Appointment</string>
    <string name="add_new_client">Add new client</string>
    <string name="schedules_txt">Schedules</string>
    <string name="sessions_txt">Sessions</string>
    <string name="update_branch_txt">update branch</string>
    <string name="add_branch_txt">add branch</string>
    <string name="start_date_txt">Start date is mandatory</string>
    <string name="start_time_txt">Start time is mandatory</string>
    <string name="end_time_txt">End time is mandatory</string>
    <string name="end_time_greater_than_error_message">End time should be greater than start time.</string>
    <string name="select_provider_name">select provider name</string>
    <string name="choose_site_message">Choose site</string>
    <string name="select_time">Select Time</string>
    <string name="fail_to_add_Schedule_txt">Error, Failed to add schedule</string>
    <string name="update_session">Update Session</string>
    <string name="add_session">Add Session</string>
    <string name="no_sessions_found_txt">No sessions Found.</string>
    <string name="no_schedules_found_txt">No Schedules found</string>
</resources>
