<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/agentList"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Agents" />
        <item
            android:id="@+id/providerList"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/provider" />
        <item
            android:id="@+id/clientList"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/client" />

        <item
            android:id="@+id/codeList"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/code" />

    </group>
    <item
        android:id="@+id/facility"
        android:checkableBehavior="single"
        android:icon="@drawable/ic_menu_manage"
        android:title="Facility">
        <menu>
            <item
                android:id="@+id/clinicList"
                android:icon="@drawable/ic_phone"
                android:title="@string/clinic" />

            <item
                android:id="@+id/waiting_areaList"
                android:icon="@drawable/ic_ambulance"
                android:title="@string/waiting_area" />
        </menu>
    </item>
    <item android:title="@string/menu_english_language"
        android:id="@+id/language_reference"
        android:icon="@drawable/ic_language"/>

</menu>
