<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/person_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ic_account_box_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/providerTxtViewOption" />

    <TextView
        android:id="@+id/providerTxtViewOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:text="@string/options_menu"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fullNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name_txt"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/person_img"
        app:layout_constraintTop_toTopOf="@+id/person_img" />

    <TextView
        android:id="@+id/email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="5dp"
        android:layout_marginTop="8dp"
        android:text="@string/email_example_txt"
        app:layout_constraintStart_toStartOf="@+id/fullNameTxt"
        app:layout_constraintTop_toBottomOf="@+id/fullNameTxt" />

    <TextView
        android:id="@+id/mobile_num_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_phone_black_24dp"
        android:drawablePadding="5dp"
        android:text="@string/phone_example_txt"
        app:layout_constraintStart_toStartOf="@+id/email_txt"
        app:layout_constraintTop_toBottomOf="@+id/email_txt" />

    <TextView
        android:id="@+id/speciality_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/speciality_txt"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mobile_num_txt"
        app:layout_constraintStart_toStartOf="@+id/mobile_num_txt"
        app:layout_constraintTop_toBottomOf="@+id/mobile_num_txt" />


</androidx.constraintlayout.widget.ConstraintLayout>