<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="4dp"
    android:layout_margin="4dp"
    app:cardBackgroundColor="@color/colorWhite"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/branch_description_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/description_hint"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/name_txt_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/branch_address_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_txt"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="@id/branch_phone_txt"
            app:layout_constraintTop_toBottomOf="@id/branch_phone_txt" />

        <TextView
            android:id="@+id/branch_email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="5dp"
            android:text="@string/email_example_txt"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/branch_description_txt"
            app:layout_constraintTop_toBottomOf="@id/branch_description_txt" />

        <TextView
            android:id="@+id/branch_phone_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="5dp"
            android:text="@string/phone_example_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/branch_email_txt"
            app:layout_constraintTop_toBottomOf="@id/branch_email_txt"
            app:layout_constraintVertical_bias="0.166" />

        <TextView
            android:id="@+id/branchTextOptionMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:text="@string/options_menu"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/branch_description_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/branch_description_txt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>