<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_delete_forever_red_24dp"
        android:gravity="center"
        android:text="@string/delete_title_dialog"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
      android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@color/colorAccent"
            android:hint="@string/cancel_btn_txt"
            android:textColorHint="@color/colorWhite" />

        <Button
            android:id="@+id/okBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@color/colorPrimary"
            android:hint="@string/ok_txt_btn"
            android:textColorHint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>